<resources>
    <string name="app_name">CPUT Test App</string>
    <string name="action_settings">Settings</string>
    <string name="Activity1Start">Start</string>
    <string name="Activity1">Activity 1</string>
    <string name="Activity2">Activity 2</string>
    <string name="Activity3">Activity 3</string>
    <string name="Activity4">Activity 4</string>
    <string name="Activity5">Activity 5</string>
    <string name="Activity6">Activity 6</string>
    <string name="Activity7">Activity 7</string>
    <string name="ActivityEnd">This is the end</string>
    <string name="ClickFor2">Click button below for Activity 2</string>
    <string name="ClickFor3">Click button below for Activity 3</string>
    <string name="ClickFor4">Click button below for Activity 4</string>
    <string name="ClickFor5">Click button below for Activity 5</string>
    <string name="ClickFor6">Click button below for Activity 6</string>
    <string name="ClickFor7">Click button below for Activity 7</string>
    <string name="ClickForEnd">This is the END</string>
</resources>
